# erd2okf

./: .gitignore  CLAUDE.md  PRODUCT_VISION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: test-model.sql
examples/schema/: companies.md  drone_details.md  index.md  roles.md  route_plans.md  route_stops.md  shipments.md  truck_details.md  user_roles.md  users.md  vehicle_fleets.md  vehicle_telemetry.md  vehicles.md
src/erd2okf/: cli.py  diff.py  generate.py  index.py  introspect.py  okf.py  typeclass.py
tests/: conftest.py  test_cli.py  test_diff.py  test_generate.py  test_index.py  test_introspect.py  test_okf.py  test_poc_criteria.py  test_typeclass.py
