[project]
name = "erd2okf"
version = "0.1.0"
description = "Generate OKF markdown schema docs from a live Postgres DB, with structural drift checking"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
]

[project.scripts]
erd2okf = "erd2okf.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erd2okf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
